--- a/PilkadaJateng/Layouts/XIBs/DaftarMateriViewController.xib
+++ b/PilkadaJateng/Layouts/XIBs/DaftarMateriViewController.xib
@@ -6,22 +6,12 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="DaftarMateriViewController" customModule="PilkadaJateng" customModuleProvider="target">
-            <connections>
-                <outlet property="view" destination="Aqi-ux-nfj" id="Ohv-1N-HdZ"/>
-            </connections>
-        </placeholder>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="DaftarMateriViewController" customModule="PilkadaJateng" customModuleProvider="target"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="Aqi-ux-nfj">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
-            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-            <gestureRecognizers/>
-            <viewLayoutGuide key="safeArea" id="jeM-qR-iRo"/>
-        </view>
+        <pageViewController autoresizesArchivedViewToFullSize="NO" transitionStyle="scroll" navigationOrientation="horizontal" spineLocation="none" id="LlC-aV-dst" customClass="DaftarMateriViewController" customModule="PilkadaJateng" customModuleProvider="target">
+            <point key="canvasLocation" x="46" y="6"/>
+        </pageViewController>
     </objects>
 </document>
