--- a/PilkadaJateng/Layouts/Storyboards/Base.lproj/Main.storyboard
+++ b/PilkadaJateng/Layouts/Storyboards/Base.lproj/Main.storyboard
@@ -472,6 +472,7 @@
                                                         <state key="normal" title="Tambah Materi"/>
                                                         <connections>
                                                             <action selector="tambahMateri:" destination="sgN-Gk-2NJ" eventType="touchUpInside" id="boL-E7-JZI"/>
+                                                            <segue destination="EX1-4R-Ihm" kind="presentation" id="cqD-LL-D58"/>
                                                         </connections>
                                                     </button>
                                                     <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="iBH-Ql-qIf">
@@ -534,6 +535,84 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="oc0-14-AAL" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="3936" y="2436"/>
+        </scene>
+        <!--Tambah Materi View Controller-->
+        <scene sceneID="Xzg-xr-t4D">
+            <objects>
+                <viewController id="EX1-4R-Ihm" customClass="TambahMateriViewController" customModule="PilkadaJateng" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="3B0-CM-jRp">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="huO-ui-JBB" customClass="CardView" customModule="PilkadaJateng" customModuleProvider="target">
+                                <rect key="frame" x="16" y="90" width="288" height="224"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0bJ-6T-oru">
+                                        <rect key="frame" x="8" y="186" width="272" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="30" id="Dhd-TE-VFr"/>
+                                        </constraints>
+                                        <state key="normal" title="Button"/>
+                                        <connections>
+                                            <action selector="selesaiButton:" destination="EX1-4R-Ihm" eventType="touchUpInside" id="9i5-6i-kVB"/>
+                                        </connections>
+                                    </button>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Subjudul" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="fEq-I8-nh2">
+                                        <rect key="frame" x="8" y="29" width="272" height="30"/>
+                                        <nil key="textColor"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="No. 3" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" highlighted="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rgy-wS-Zyt">
+                                        <rect key="frame" x="8" y="0.0" width="272" height="21"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Isi" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="yqX-qg-0C8">
+                                        <rect key="frame" x="8" y="67" width="272" height="111"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                    </textView>
+                                </subviews>
+                                <color key="backgroundColor" red="1" green="0.64990981748363574" blue="0.73368937846272742" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="0bJ-6T-oru" secondAttribute="bottom" constant="8" id="3Zo-MT-XlF"/>
+                                    <constraint firstItem="yqX-qg-0C8" firstAttribute="top" secondItem="fEq-I8-nh2" secondAttribute="bottom" constant="8" id="ALA-ka-iO2"/>
+                                    <constraint firstItem="yqX-qg-0C8" firstAttribute="leading" secondItem="huO-ui-JBB" secondAttribute="leading" constant="8" id="EPt-MD-qpO"/>
+                                    <constraint firstItem="fEq-I8-nh2" firstAttribute="leading" secondItem="huO-ui-JBB" secondAttribute="leading" constant="8" id="F49-A5-TZd"/>
+                                    <constraint firstAttribute="trailing" secondItem="0bJ-6T-oru" secondAttribute="trailing" constant="8" id="JY2-5v-0NQ"/>
+                                    <constraint firstItem="0bJ-6T-oru" firstAttribute="top" secondItem="yqX-qg-0C8" secondAttribute="bottom" constant="8" id="LTz-z3-KDC"/>
+                                    <constraint firstAttribute="trailing" secondItem="rgy-wS-Zyt" secondAttribute="trailing" constant="8" id="MRZ-4w-MPn"/>
+                                    <constraint firstItem="0bJ-6T-oru" firstAttribute="top" secondItem="yqX-qg-0C8" secondAttribute="bottom" constant="8" id="Qws-34-Csa"/>
+                                    <constraint firstItem="rgy-wS-Zyt" firstAttribute="leading" secondItem="huO-ui-JBB" secondAttribute="leading" constant="8" id="RDD-CQ-578"/>
+                                    <constraint firstItem="0bJ-6T-oru" firstAttribute="leading" secondItem="huO-ui-JBB" secondAttribute="leading" constant="8" id="Wgo-B9-y36"/>
+                                    <constraint firstItem="rgy-wS-Zyt" firstAttribute="top" secondItem="huO-ui-JBB" secondAttribute="top" id="ffR-Ny-YIG"/>
+                                    <constraint firstAttribute="trailing" secondItem="yqX-qg-0C8" secondAttribute="trailing" constant="8" id="kly-Kc-Dzi"/>
+                                    <constraint firstItem="fEq-I8-nh2" firstAttribute="top" secondItem="rgy-wS-Zyt" secondAttribute="bottom" constant="8" id="qdO-tc-1ia"/>
+                                    <constraint firstAttribute="trailing" secondItem="fEq-I8-nh2" secondAttribute="trailing" constant="8" id="xtx-fb-sqM"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="huO-ui-JBB" firstAttribute="top" secondItem="1LD-Y1-zg8" secondAttribute="top" constant="70" id="OsX-4I-tjR"/>
+                            <constraint firstItem="1LD-Y1-zg8" firstAttribute="trailing" secondItem="huO-ui-JBB" secondAttribute="trailing" constant="16" id="XbD-Cu-ryu"/>
+                            <constraint firstItem="huO-ui-JBB" firstAttribute="leading" secondItem="1LD-Y1-zg8" secondAttribute="leading" constant="16" id="bWk-Hw-CLl"/>
+                            <constraint firstItem="1LD-Y1-zg8" firstAttribute="bottom" secondItem="huO-ui-JBB" secondAttribute="bottom" constant="166" id="u9d-zf-lka"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="1LD-Y1-zg8"/>
+                    </view>
+                    <connections>
+                        <outlet property="isiTextView" destination="yqX-qg-0C8" id="CJ2-gz-O7x"/>
+                        <outlet property="nomorLabel" destination="rgy-wS-Zyt" id="AcB-a5-iXt"/>
+                        <outlet property="subjudulTextField" destination="fEq-I8-nh2" id="IVr-z3-O2r"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="evP-t1-1u6" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3936" y="3331"/>
         </scene>
         <!--Tahapan Pilkada-->
         <scene sceneID="5Ah-5G-fQw">
